# macropad-firmware

./: CMakeLists.txt  README.md  build_and_flash.sh  build_and_flash_probe.sh  build_and_flash_uf2.sh  main.c
.github/workflows/: main.yml
HID_example/: CMakeLists.txt  main.c
blink_example/: blink.c
examples/HID_example/: CMakeLists.txt
examples/blink_example/: CMakeLists.txt  blink.c
examples/uart_example/: CMakeLists.txt  hello_uart.c
gpio/: gpio.c  gpio.h
hid/: hid.c  hid.h  main.c
macro_core/: macro_core.c  macro_core.h  macro_flash.c  macro_flash.h
macro_gpio/: macro_gpio.c  macro_gpio.h
macro_hid/: macro_custom_report.c  macro_custom_report.h  macro_hid.c  macro_hid.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
macro_uart/: macro_uart.c  macro_uart.h
uart/: uart.c  uart.h
